updated search_app.ipynb and exceptions.py
- added code to search based on location and tweets by a specific user
- added sort parameter to functions where it is applicable
- added exception class for invalid sort criterion

--- a/search_app.ipynb
+++ b/search_app.ipynb
@@ -17,7 +17,8 @@
     "import psycopg2\n",
     "from pymongo import MongoClient\n",
     "from fastapi import HTTPException\n",
-    "from exceptions import *"
+    "from exceptions import *\n",
+    "import requests"
    ]
   },
   {
@@ -129,15 +130,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function to search tweets containing a specified keyword\n",
-    "def search_tweets_keyword(keyword: str):\n",
+    "# function to retreive tweets containing a specified keyword\n",
+    "def retrieve_tweets_keyword(keyword: str, sort_criterion = None):\n",
     "    \"\"\"\n",
     "        Function to get the information of tweets based on a user-specified keyword.\n",
     "        Input:\n",
     "            keyword (str): user-specified keyword\n",
+    "            sort_criterion (str): criteria for sorting the results\n",
+    "                default: decreasing order of popularity (favorite count)\n",
+    "                valid inputs:\n",
+    "                    'oldestToNewest', 'newestToOldest', 'popularity'\n",
     "        Output:\n",
     "            out (list): list of tweets containing the keyword\n",
     "    \"\"\"\n",
+    "\n",
+    "    # check if sort_criterion is valid, if specified:\n",
+    "    if sort_criterion is not None:\n",
+    "        if sort_criterion not in ['oldestToNewest', 'newestToOldest', 'popularity']:\n",
+    "            raise HTTPException(status_code = InvalidSortCriterionError.code, detail = InvalidSortCriterionError.description)\n",
+    "\n",
     "    out = []\n",
     "    query = {'$text': {'$search': keyword}}\n",
     "    tweets_match = tweets_collection.find(query) # we can add .limit(PAGE_LIMIT) here, if needed\n",
@@ -162,8 +173,15 @@
     "        \n",
     "        out.append(tweet)\n",
     "\n",
-    "    # sort the results from newest to oldest before returning\n",
-    "    return out.sort(key = lambda x: int(x['timestamp_ms']), reverse = True)"
+    "    # sort the results from oldest to newest before returning, if specified 'oldestToNewest'\n",
+    "    if sort_criterion == \"oldestToNewest\":\n",
+    "        return out.sort(key = lambda x: int(x['timestamp_ms']), reverse = False)\n",
+    "    elif sort_criterion == \"newestToOldest\":\n",
+    "        # otherwise sort the results from newest to oldest before returning if specified 'newestToOldest'\n",
+    "        return out.sort(key = lambda x: int(x['timestamp_ms']), reverse = True)\n",
+    "    else:\n",
+    "        # sort the output in the decreasing order of favorites (popularity), by default or if specified 'popularity'\n",
+    "        return out.sort(key = lambda x: int(x['favorite_count']), reverse = True)"
    ]
   },
   {
@@ -179,11 +197,11 @@
     "        Input:\n",
     "            tweet_id (str): user-specified tweet ID\n",
     "        Output:\n",
-    "            tweet: tweet corresponding to tweet_id\n",
+    "            tweet (JSON object): tweet corresponding to tweet_id\n",
     "    \"\"\"\n",
     "    query = {'id': tweet_id}\n",
     "    result = tweets_collection.find_one(query)\n",
-    "    if result is None:\n",
+    "    if result.count() == 0:\n",
     "        # raise an exception if the tweet doesn't exist in the database\n",
     "        raise HTTPException(status_code = TweetNotFoundError.code, detail = TweetNotFoundError.description)\n",
     "    tweet = {\n",
@@ -204,6 +222,142 @@
     "        tweet['retweet'] = \"No\"\n",
     "\n",
     "    return tweet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to retrieve all tweets by a user\n",
+    "def retrieve_tweets_user(user_id: str, sort_criterion = 'popularity'):\n",
+    "    \"\"\"\n",
+    "        Function to retrieve all tweets by a specific user (user-specified user ID)\n",
+    "        Input:\n",
+    "            user_id (str): user-specified user ID\n",
+    "            sort_criterion (str): criteria for sorting the results\n",
+    "                default: decreasing order of popularity (favorite count)\n",
+    "                valid inputs:\n",
+    "                    'oldestToNewest', 'newestToOldest', 'popularity'\n",
+    "        Output:\n",
+    "            tweets_list (list): list of tweets made by a user\n",
+    "    \"\"\"\n",
+    "    # check if the user id is valid\n",
+    "    p_cur.execute(\"SELECT id FROM TwitterUser WHERE id = {0};\".format(user_id))\n",
+    "    user_id_db = p_cur.fetchone()\n",
+    "    if user_id_db is None:\n",
+    "        # raise an exception if the user doesn't exist in the database\n",
+    "        raise HTTPException(status_code = UserNotFoundError.code, detail = UserNotFoundError.description)\n",
+    "\n",
+    "    # if the user exists, proceed to search MongoDB\n",
+    "    query = {'user_id': user_id}\n",
+    "    tweets_match = tweets_collection.find(query)\n",
+    "    \n",
+    "    if tweets_match.count() == 0:\n",
+    "        return \"This user has not tweeted anything yet.\"\n",
+    "\n",
+    "    tweets_list = []\n",
+    "    for result in tweets_match:\n",
+    "        tweet = {\n",
+    "            'id': result['_id'],\n",
+    "            'text': result['text'],\n",
+    "            'user_id': result['user_id'],\n",
+    "            'quote_count': result['quote_count'],\n",
+    "            'reply_count': result['reply_count'],\n",
+    "            'retweet_count': result['retweet_count'],\n",
+    "            'favorite_count': result['favorite_count'],\n",
+    "            'created_at': result['timestamp'],\n",
+    "            'coordinates': result['coordinates']\n",
+    "        }\n",
+    "        # add information on whether the tweet is a retweet\n",
+    "        if 'retweet' in result:\n",
+    "            tweet['retweet'] = \"Yes\"\n",
+    "        else:\n",
+    "            tweet['retweet'] = \"No\"\n",
+    "\n",
+    "        tweets_list.append(tweet)\n",
+    "\n",
+    "    # sort the results from oldest to newest before returning, if specified 'oldestToNewest'\n",
+    "    if sort_criterion == \"oldestToNewest\":\n",
+    "        return tweets_list.sort(key = lambda x: int(x['timestamp_ms']), reverse = False)\n",
+    "    elif sort_criterion == \"newestToOldest\":\n",
+    "        # otherwise sort the results from newest to oldest before returning if specified 'newestToOldest'\n",
+    "        return tweets_list.sort(key = lambda x: int(x['timestamp_ms']), reverse = True)\n",
+    "    else:\n",
+    "        # sort the output in the decreasing order of favorites (popularity), by default or if specified 'popularity'\n",
+    "        return tweets_list.sort(key = lambda x: int(x['favorite_count']), reverse = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to retrieve tweets based on location\n",
+    "def retrieve_tweets_location(location: str, distance = 100000, sort_criterion = 'popularity'):\n",
+    "    \"\"\"\n",
+    "        Function to retrieve tweets near a specified location.\n",
+    "        Input:\n",
+    "            location (str): user-specified location\n",
+    "            distance (int): radius of the search (100 kilometers, by default)\n",
+    "            sort_criterion (str): criteria for sorting the results\n",
+    "                default: decreasing order of popularity (favorite count)\n",
+    "                valid inputs:\n",
+    "                    'oldestToNewest', 'newestToOldest', 'popularity'\n",
+    "        Output:\n",
+    "            tweets_list (list): list of tweets made from within the radius of the specified location\n",
+    "    \"\"\"\n",
+    "    # getting the latitude and longitude of the location specified\n",
+    "    endpoint = \"https://nominatim.openstreetmap.org/search\"\n",
+    "    params = {\"q\": location, \"format\": \"json\", \"limit\": 1}\n",
+    "    # sending a request of the Nominatim API\n",
+    "    response = requests.get(endpoint, params=params)\n",
+    "    result = response.json()[0]\n",
+    "    # getting the latitude and longitude from the response of the API\n",
+    "    latitude = result[\"lat\"]\n",
+    "    longitude = result[\"lon\"]\n",
+    "\n",
+    "    # creating a geospatial index on the coordinates field\n",
+    "    tweets_collection.create_index([(\"coordinates\", \"2dsphere\")])\n",
+    "    \n",
+    "    query = {\"coordinates\": {\"$near\": {\"$geometry\": {\"type\": \"Point\", \"coordinates\": [longitude, latitude]}, \"$maxDistance\": distance}}}\n",
+    "    tweets_match = tweets_collection.find(query)\n",
+    "    \n",
+    "    if tweets_match.count() == 0:\n",
+    "        return \"There are no tweets near this location yet.\"\n",
+    "\n",
+    "    tweets_list = []\n",
+    "    for result in tweets_match:\n",
+    "        tweet = {\n",
+    "            'id': result['_id'],\n",
+    "            'text': result['text'],\n",
+    "            'user_id': result['user_id'],\n",
+    "            'quote_count': result['quote_count'],\n",
+    "            'reply_count': result['reply_count'],\n",
+    "            'retweet_count': result['retweet_count'],\n",
+    "            'favorite_count': result['favorite_count'],\n",
+    "            'created_at': result['timestamp'],\n",
+    "            'coordinates': result['coordinates']\n",
+    "        }\n",
+    "        # add information on whether the tweet is a retweet\n",
+    "        if 'retweet' in result:\n",
+    "            tweet['retweet'] = \"Yes\"\n",
+    "        else:\n",
+    "            tweet['retweet'] = \"No\"\n",
+    "\n",
+    "        tweets_list.append(tweet)\n",
+    "\n",
+    "    # sort the results from oldest to newest before returning, if specified 'oldestToNewest'\n",
+    "    if sort_criterion == \"oldestToNewest\":\n",
+    "        return tweets_list.sort(key = lambda x: int(x['timestamp_ms']), reverse = False)\n",
+    "    elif sort_criterion == \"newestToOldest\":\n",
+    "        # otherwise sort the results from newest to oldest before returning if specified 'newestToOldest'\n",
+    "        return tweets_list.sort(key = lambda x: int(x['timestamp_ms']), reverse = True)\n",
+    "    else:\n",
+    "        # sort the output in the decreasing order of favorites (popularity), by default or if specified 'popularity'\n",
+    "        return tweets_list.sort(key = lambda x: int(x['favorite_count']), reverse = True)"
    ]
   }
  ],
