--- a/tweets_to_mongoDB.ipynb
+++ b/tweets_to_mongoDB.ipynb
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pymongo in /Users/vishalreddy/opt/anaconda3/lib/python3.9/site-packages (4.3.3)\r\n",
-      "Requirement already satisfied: dnspython<3.0.0,>=1.16.0 in /Users/vishalreddy/opt/anaconda3/lib/python3.9/site-packages (from pymongo) (2.3.0)\r\n"
+      "Requirement already satisfied: pymongo in /Users/vishalreddy/opt/anaconda3/lib/python3.9/site-packages (4.3.3)\n",
+      "Requirement already satisfied: dnspython<3.0.0,>=1.16.0 in /Users/vishalreddy/opt/anaconda3/lib/python3.9/site-packages (from pymongo) (2.3.0)\n"
      ]
     }
    ],
@@ -71,11 +71,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "0923bd63",
+   "cell_type": "raw",
+   "id": "c3fafbd6",
    "metadata": {},
-   "outputs": [],
    "source": [
     "with open(\"corona-out-3\", \"r\") as f1:\n",
     "    \n",
@@ -223,7 +221,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c1009d73",
    "metadata": {},
@@ -233,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "26be2d6f",
    "metadata": {},
    "outputs": [
@@ -264,7 +261,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "15b0f3f2",
    "metadata": {},
@@ -274,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "b9d470fb",
    "metadata": {},
    "outputs": [
@@ -459,7 +455,7 @@
        " 'timestamp_ms': '1587817302251'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,6 +463,91 @@
    "source": [
     "entity"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "505f5759",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = collection.find_one({\"user_id\" : 1091660129894838272})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b32ca892",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': 1254022773598572544, 'text': '@VinceMcMahon @TripleH We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #endovascular https://t.co/YkVlYtJiGL', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587817302499'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "14699964",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = collection.find({\"user_id\" : 1091660129894838272})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1461d66f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': 1254022773598572544, 'text': '@VinceMcMahon @TripleH We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #endovascular https://t.co/YkVlYtJiGL', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587817302499'}\n",
+      "\n",
+      "{'_id': 1254023153204035586, 'text': '@aleynaakbuluut We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #endovascular https://t.co/2kFF0dGgFq', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587817393004'}\n",
+      "\n",
+      "{'_id': 1254034070620823552, 'text': '@HHSGov @realDonaldTrump @Surgeon_General We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #endovascular https://t.co/Y4AbBlpZFi', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587819995919'}\n",
+      "\n",
+      "{'_id': 1254034130221834241, 'text': '@HHSGov @HRSAgov We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #endovascular https://t.co/2LPL7zXJsF', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587820010129'}\n",
+      "\n",
+      "{'_id': 1254034353396555777, 'text': '@CDCgov @realDonaldTrump We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #FoxNews', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587820063338'}\n",
+      "\n",
+      "{'_id': 1254034628777783296, 'text': '@NIH @realDonaldTrump We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #FoxNews #FoxBusiness https://t.co/efuMT1SeUn', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587820128994'}\n",
+      "\n",
+      "{'_id': 1254034874337579008, 'text': '@CDCgov @realDonaldTrump We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #FoxNews #FoxBusiness https://t.co/5vg63A9k66', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587820187540'}\n",
+      "\n",
+      "{'_id': 1254034931753406464, 'text': '@DepSecHargan @realDonaldTrump @VP @US_FDA We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #FoxNews #FoxBusiness https://t.co/eeQOPyAz7L', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587820201229'}\n",
+      "\n",
+      "{'_id': 1254050509360697350, 'text': '@realDonaldTrump We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #FoxNews #FoxBusiness https://t.co/JnFJpgaStn', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587823915220'}\n",
+      "\n",
+      "{'_id': 1254050612544757760, 'text': '@CDCgov @realDonaldTrump We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #FoxNews #FoxBusiness https://t.co/th2tqHjAmp', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587823939821'}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in p:\n",
+    "    print(i)\n",
+    "    print('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ecdf020",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
