--- a/tweets_to_mongoDB.ipynb
+++ b/tweets_to_mongoDB.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "c3fafbd6",
+   "id": "ae08e7c9",
    "metadata": {},
    "source": [
     "with open(\"corona-out-3\", \"r\") as f1:\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "26be2d6f",
    "metadata": {},
    "outputs": [
@@ -261,17 +261,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "15b0f3f2",
-   "metadata": {},
-   "source": [
-    "Sample Tweet For Reference"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b9d470fb",
+   "execution_count": 25,
+   "id": "1bc7d8ad",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +447,204 @@
        " 'timestamp_ms': '1587817302251'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "580cfee1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_line = 0\n",
+    "with open(\"corona-out-3\", \"r\") as f1:\n",
+    "    for line in f1:\n",
+    "        try:\n",
+    "            entity = json.loads(line)  \n",
+    "            if entity['text'].startswith('RT') : \n",
+    "                num_line += 1\n",
+    "                if num_line == 50 :  \n",
+    "                      break\n",
+    "                    \n",
+    "        except:\n",
+    "            continue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15b0f3f2",
+   "metadata": {},
+   "source": [
+    "Sample Tweet For Reference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b9d470fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'created_at': 'Sat Apr 25 12:21:49 +0000 2020',\n",
+       " 'id': 1254022803969527808,\n",
+       " 'id_str': '1254022803969527808',\n",
+       " 'text': 'RT @Khiladi_ki_saru: Apni kismat kharab h , ab jab saalon baad action flick aayi #Sooryavanshi vo bhi akki kat ki jodi to yeh corona aya, a…',\n",
+       " 'source': '<a href=\"http://twitter.com/download/android\" rel=\"nofollow\">Twitter for Android</a>',\n",
+       " 'truncated': False,\n",
+       " 'in_reply_to_status_id': None,\n",
+       " 'in_reply_to_status_id_str': None,\n",
+       " 'in_reply_to_user_id': None,\n",
+       " 'in_reply_to_user_id_str': None,\n",
+       " 'in_reply_to_screen_name': None,\n",
+       " 'user': {'id': 1144699678086139904,\n",
+       "  'id_str': '1144699678086139904',\n",
+       "  'name': 'akkians (kk) gujrat',\n",
+       "  'screen_name': 'Khushalkotak1',\n",
+       "  'location': None,\n",
+       "  'url': None,\n",
+       "  'description': '#king@staylishking',\n",
+       "  'translator_type': 'none',\n",
+       "  'protected': False,\n",
+       "  'verified': False,\n",
+       "  'followers_count': 57,\n",
+       "  'friends_count': 178,\n",
+       "  'listed_count': 0,\n",
+       "  'favourites_count': 9206,\n",
+       "  'statuses_count': 6640,\n",
+       "  'created_at': 'Fri Jun 28 20:10:45 +0000 2019',\n",
+       "  'utc_offset': None,\n",
+       "  'time_zone': None,\n",
+       "  'geo_enabled': False,\n",
+       "  'lang': None,\n",
+       "  'contributors_enabled': False,\n",
+       "  'is_translator': False,\n",
+       "  'profile_background_color': 'F5F8FA',\n",
+       "  'profile_background_image_url': '',\n",
+       "  'profile_background_image_url_https': '',\n",
+       "  'profile_background_tile': False,\n",
+       "  'profile_link_color': '1DA1F2',\n",
+       "  'profile_sidebar_border_color': 'C0DEED',\n",
+       "  'profile_sidebar_fill_color': 'DDEEF6',\n",
+       "  'profile_text_color': '333333',\n",
+       "  'profile_use_background_image': True,\n",
+       "  'profile_image_url': 'http://pbs.twimg.com/profile_images/1193559457491542018/_K5Gh9UI_normal.jpg',\n",
+       "  'profile_image_url_https': 'https://pbs.twimg.com/profile_images/1193559457491542018/_K5Gh9UI_normal.jpg',\n",
+       "  'default_profile': True,\n",
+       "  'default_profile_image': False,\n",
+       "  'following': None,\n",
+       "  'follow_request_sent': None,\n",
+       "  'notifications': None},\n",
+       " 'geo': None,\n",
+       " 'coordinates': None,\n",
+       " 'place': None,\n",
+       " 'contributors': None,\n",
+       " 'retweeted_status': {'created_at': 'Sat Apr 25 04:51:42 +0000 2020',\n",
+       "  'id': 1253909528342601729,\n",
+       "  'id_str': '1253909528342601729',\n",
+       "  'text': 'Apni kismat kharab h , ab jab saalon baad action flick aayi #Sooryavanshi vo bhi akki kat ki jodi to yeh corona aya… https://t.co/Vf3DU4c58Y',\n",
+       "  'source': '<a href=\"http://twitter.com/download/android\" rel=\"nofollow\">Twitter for Android</a>',\n",
+       "  'truncated': True,\n",
+       "  'in_reply_to_status_id': None,\n",
+       "  'in_reply_to_status_id_str': None,\n",
+       "  'in_reply_to_user_id': None,\n",
+       "  'in_reply_to_user_id_str': None,\n",
+       "  'in_reply_to_screen_name': None,\n",
+       "  'user': {'id': 3239730122,\n",
+       "   'id_str': '3239730122',\n",
+       "   'name': '🌹 𝐒𝐚𝐑𝐮𝐮 🌹 ˢᵒᵒʳʸᵃᵛᵃⁿˢʰⁱ🌬',\n",
+       "   'screen_name': 'Khiladi_ki_saru',\n",
+       "   'location': 'गुजरात, भारत',\n",
+       "   'url': None,\n",
+       "   'description': '🥀 𝑵𝒐 𝒔𝒐𝒚 𝒕𝒂𝒏 𝒃𝒖𝒆𝒏𝒂 , 𝓑𝓮𝓵𝓵𝓪 𝓬𝓲𝓪𝓸 🥀',\n",
+       "   'translator_type': 'none',\n",
+       "   'protected': False,\n",
+       "   'verified': False,\n",
+       "   'followers_count': 2672,\n",
+       "   'friends_count': 395,\n",
+       "   'listed_count': 4,\n",
+       "   'favourites_count': 81099,\n",
+       "   'statuses_count': 46475,\n",
+       "   'created_at': 'Mon Jun 08 10:13:21 +0000 2015',\n",
+       "   'utc_offset': None,\n",
+       "   'time_zone': None,\n",
+       "   'geo_enabled': True,\n",
+       "   'lang': None,\n",
+       "   'contributors_enabled': False,\n",
+       "   'is_translator': False,\n",
+       "   'profile_background_color': '000000',\n",
+       "   'profile_background_image_url': 'http://abs.twimg.com/images/themes/theme1/bg.png',\n",
+       "   'profile_background_image_url_https': 'https://abs.twimg.com/images/themes/theme1/bg.png',\n",
+       "   'profile_background_tile': False,\n",
+       "   'profile_link_color': 'F5ABB5',\n",
+       "   'profile_sidebar_border_color': '000000',\n",
+       "   'profile_sidebar_fill_color': '000000',\n",
+       "   'profile_text_color': '000000',\n",
+       "   'profile_use_background_image': False,\n",
+       "   'profile_image_url': 'http://pbs.twimg.com/profile_images/1250676087643766787/SaUhPzFO_normal.jpg',\n",
+       "   'profile_image_url_https': 'https://pbs.twimg.com/profile_images/1250676087643766787/SaUhPzFO_normal.jpg',\n",
+       "   'profile_banner_url': 'https://pbs.twimg.com/profile_banners/3239730122/1585837999',\n",
+       "   'default_profile': False,\n",
+       "   'default_profile_image': False,\n",
+       "   'following': None,\n",
+       "   'follow_request_sent': None,\n",
+       "   'notifications': None},\n",
+       "  'geo': None,\n",
+       "  'coordinates': None,\n",
+       "  'place': None,\n",
+       "  'contributors': None,\n",
+       "  'is_quote_status': False,\n",
+       "  'extended_tweet': {'full_text': 'Apni kismat kharab h , ab jab saalon baad action flick aayi #Sooryavanshi vo bhi akki kat ki jodi to yeh corona aya, ab jab #AkshayKumar sir ne kuch naya tra kiya transgender banke to online release ho rha 🙂 phooti kismat \\n\\n250cr ki potential vali films ka yeh haal ho rha🙃',\n",
+       "   'display_text_range': [0, 273],\n",
+       "   'entities': {'hashtags': [{'text': 'Sooryavanshi', 'indices': [60, 73]},\n",
+       "     {'text': 'AkshayKumar', 'indices': [124, 136]}],\n",
+       "    'urls': [],\n",
+       "    'user_mentions': [],\n",
+       "    'symbols': []}},\n",
+       "  'quote_count': 0,\n",
+       "  'reply_count': 10,\n",
+       "  'retweet_count': 21,\n",
+       "  'favorite_count': 126,\n",
+       "  'entities': {'hashtags': [{'text': 'Sooryavanshi', 'indices': [60, 73]}],\n",
+       "   'urls': [{'url': 'https://t.co/Vf3DU4c58Y',\n",
+       "     'expanded_url': 'https://twitter.com/i/web/status/1253909528342601729',\n",
+       "     'display_url': 'twitter.com/i/web/status/1…',\n",
+       "     'indices': [117, 140]}],\n",
+       "   'user_mentions': [],\n",
+       "   'symbols': []},\n",
+       "  'favorited': False,\n",
+       "  'retweeted': False,\n",
+       "  'filter_level': 'low',\n",
+       "  'lang': 'hi'},\n",
+       " 'is_quote_status': False,\n",
+       " 'quote_count': 0,\n",
+       " 'reply_count': 0,\n",
+       " 'retweet_count': 0,\n",
+       " 'favorite_count': 0,\n",
+       " 'entities': {'hashtags': [{'text': 'Sooryavanshi', 'indices': [81, 94]}],\n",
+       "  'urls': [],\n",
+       "  'user_mentions': [{'screen_name': 'Khiladi_ki_saru',\n",
+       "    'name': '🌹 𝐒𝐚𝐑𝐮𝐮 🌹 ˢᵒᵒʳʸᵃᵛᵃⁿˢʰⁱ🌬',\n",
+       "    'id': 3239730122,\n",
+       "    'id_str': '3239730122',\n",
+       "    'indices': [3, 19]}],\n",
+       "  'symbols': []},\n",
+       " 'favorited': False,\n",
+       " 'retweeted': False,\n",
+       " 'filter_level': 'low',\n",
+       " 'lang': 'hi',\n",
+       " 'timestamp_ms': '1587817309740'}"
+      ]
+     },
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "505f5759",
+   "id": "901a275c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b32ca892",
+   "id": "2ecbb4e7",
    "metadata": {},
    "outputs": [
     {
@@ -489,13 +678,13 @@
     }
    ],
    "source": [
-    "print(p)"
+    "print(p) 1254022803969527808"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "14699964",
+   "id": "7e4c4a08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1461d66f",
+   "id": "40129a65",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ecdf020",
+   "id": "d9cc0466",
    "metadata": {},
    "outputs": [],
    "source": []
